@@ -1,8 +1,8 @@
 //
-// This file was generated by the JavaTM Architecture for XML Binding(JAXB) Reference Implementation, vJAXB 2.1.10 in JDK 6 
+// This file was generated by the JavaTM Architecture for XML Binding(JAXB) Reference Implementation, v2.2.5 
 // See <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> 
 // Any modifications to this file will be lost upon recompilation of the source schema. 
-// Generated on: 2011.04.20 at 08:55:59 AM EEST 
+// Generated on: 2012.03.09 at 11:52:28 PM CET 
 //
 
 
@@ -30,6 +30,7 @@ import javax.xml.bind.annotation.XmlType;
  *         &lt;element name="target_dir" type="{http://www.w3.org/2001/XMLSchema}string"/>
  *         &lt;element name="tm_dir" type="{http://www.w3.org/2001/XMLSchema}string"/>
  *         &lt;element name="glossary_dir" type="{http://www.w3.org/2001/XMLSchema}string"/>
+ *         &lt;element name="glossary_file" type="{http://www.w3.org/2001/XMLSchema}string"/>
  *         &lt;element name="dictionary_dir" type="{http://www.w3.org/2001/XMLSchema}string"/>
  *         &lt;element name="source_lang" type="{http://www.w3.org/2001/XMLSchema}string"/>
  *         &lt;element name="target_lang" type="{http://www.w3.org/2001/XMLSchema}string"/>
@@ -59,6 +60,8 @@ public class Project {
     protected String tmDir;
     @XmlElement(name = "glossary_dir", required = true)
     protected String glossaryDir;
+    @XmlElement(name = "glossary_file", required = true)
+    protected String glossaryFile;
     @XmlElement(name = "dictionary_dir", required = true)
     protected String dictionaryDir;
     @XmlElement(name = "source_lang", required = true)
@@ -69,7 +72,7 @@ public class Project {
     protected Boolean sentenceSeg;
     @XmlElement(name = "support_default_translations")
     protected Boolean supportDefaultTranslations;
-    @XmlAttribute(required = true)
+    @XmlAttribute(name = "version", required = true)
     protected String version;
 
     /**
@@ -166,6 +169,30 @@ public class Project {
      */
     public void setGlossaryDir(String value) {
         this.glossaryDir = value;
+    }
+
+    /**
+     * Gets the value of the glossaryFile property.
+     * 
+     * @return
+     *     possible object is
+     *     {@link String }
+     *     
+     */
+    public String getGlossaryFile() {
+        return glossaryFile;
+    }
+
+    /**
+     * Sets the value of the glossaryFile property.
+     * 
+     * @param value
+     *     allowed object is
+     *     {@link String }
+     *     
+     */
+    public void setGlossaryFile(String value) {
+        this.glossaryFile = value;
     }
 
     /**
